--- a/router/tsconfig.json
+++ b/router/tsconfig.json
@@ -2,9 +2,14 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
+    "rootDir": "./src",
+    "outDir": "./dist",
     "esModuleInterop": true,
     "strict": true,
     "skipLibCheck": true,
     "allowJs": true
-  }
+  },
+  "include": [
+    "./src/**/*"
+  ]
 }
